--- a/configs/accelerators/eyeriss-like.cfg
+++ b/configs/accelerators/eyeriss-like.cfg
@@ -40,9 +40,6 @@ S1_Y,1
 L2_DATAFLOW,WS
 L2_TYPE,SHARED,128
 # ***************************************************************
-# S2_X & S2_Y [S]: # OF MULTIPLE ACCELERATORS
-# S2_NOC_EXISTS  : 1 (TRUE) | 0 (FALSE)
-S2_NOC_EXISTS,0
-S2_X,1
-S2_Y,1
+# S2[S]: # OF MULTIPLE ACCELERATORS
+S2,1
 # ***************************************************************
