--- a/configs/accelerators/eyeriss.cfg
+++ b/configs/accelerators/eyeriss.cfg
@@ -42,9 +42,6 @@ L2_DATAFLOW,OS
 #L2_TYPE,SHARED_OI,100,0
 L2_TYPE,SHARED,108
 # ***************************************************************
-# S2_X & S2_Y [S]: # OF MULTIPLE ACCELERATORS
-# S2_NOC_EXISTS  : 1 (TRUE) | 0 (FALSE)
-S2_NOC_EXISTS,0
-S2_X,1
-S2_Y,1
+# S2[S]: # OF MULTIPLE ACCELERATORS
+S2,1
 # ***************************************************************
