--- a/configs/accelerators/eyeriss-like.cfg
+++ b/configs/accelerators/eyeriss-like.cfg
@@ -24,7 +24,7 @@ MAC_WIDTH,1
 # L1 DATAFLOW: IS | WS | OS (DEPENDING ON L1_TYPE)
 # L1 DATAFLOW MUST BE POSITIONED BEFORE L1_TYPE.
 # L1_UNIT    : BYTE
-L1_DATAFLOW,IS
+L1_DATAFLOW,WS
 L1_TYPE,SHARED,512
 # ***************************************************************
 # S1_X & S1_Y [S]: # OF MULTIPLE PES
@@ -37,7 +37,7 @@ S1_Y,1
 # L2 DATAFLOW: IS | WS | OS (DEPENDING ON L2_TYPE)
 # L2 DATAFLOW MUST BE POSITIONED BEFORE L2_TYPE.
 # L2_UNIT    : KB
-L2_DATAFLOW,IS
+L2_DATAFLOW,OS
 L2_TYPE,SHARED,128
 # ***************************************************************
 # S2[S]: # OF MULTIPLE ACCELERATORS
