--- a/configs/accelerators/eyeriss.cfg
+++ b/configs/accelerators/eyeriss.cfg
@@ -26,7 +26,6 @@ MAC_WIDTH,1
 # L1_UNIT    : BYTE
 L1_DATAFLOW,WS
 L1_TYPE,SEPARATED,24,448,48
-#L1_TYPE,SHARED,520
 # ***************************************************************
 # S1_X & S1_Y [S]: # OF MULTIPLE PES
 # S1_NOC_EXISTS  : 1 (TRUE) | 0 (FALSE)
@@ -39,8 +38,7 @@ S1_Y,12
 # L2 DATAFLOW MUST BE POSITIONED BEFORE L2_TYPE.
 # L2_UNIT    : KB
 L2_DATAFLOW,OS
-#L2_TYPE,SHARED_OI,100,0
-L2_TYPE,SHARED,108
+L2_TYPE,SHARED_OI,100,0
 # ***************************************************************
 # S2[S]: # OF MULTIPLE ACCELERATORS
 S2,1
