--- a/configs/accelerators/edge_tpu_8x8.cfg
+++ b/configs/accelerators/edge_tpu_8x8.cfg
@@ -1,7 +1,7 @@
 # ***************************************************************
 # ACCELERATOR SPECIFICATION
 # ***************************************************************
-[ACC:TPU]
+[ACC:EDGE_TPU_8x8]
 # ***************************************************************
 # MAC [T]     : MULTIPLY-ACCUMULATE UNIT
 # PRECISION   : FP8 | FP16 | FP32 | INT8 | INT16 | INT32
@@ -30,15 +30,15 @@ L1_TYPE,NONE
 # S1_X & S1_Y [S]: # OF MULTIPLE PES
 # S1_NOC_EXISTS  : 1 (TRUE) | 0 (FALSE)
 S1_NOC_EXISTS,1
-S1_X,256
-S1_Y,256
+S1_X,8
+S1_Y,8
 # ***************************************************************
 # L2 [T]     : GLOBAL BUFFER IN EACH ACCELERATOR
 # L2 DATAFLOW: IS | WS | OS (DEPENDING ON L2_TYPE)
 # L2 DATAFLOW MUST BE POSITIONED BEFORE L2_TYPE.
 # L2_UNIT    : KB
 L2_DATAFLOW,OS
-L2_TYPE,SHARED_OI,24576,-1
+L2_TYPE,SHARED_OI,24,-1
 # ***************************************************************
 # S2[S]: # OF MULTIPLE ACCELERATORS
 S2,1
