--- a/configs/accelerators/eyeriss.cfg
+++ b/configs/accelerators/eyeriss.cfg
@@ -43,3 +43,13 @@ L2_TYPE,SHARED_OI,100,0
 # S2[S]: # OF MULTIPLE ACCELERATORS
 S2,1
 # ***************************************************************
+# ENERGY REFERENCES
+MAC_OPERATION,0.075
+L1_ACCESS_I,0.50
+L1_ACCESS_F,0.94
+L1_ACCESS_O,0.10
+L2_ACCESS_I,13.5
+L2_ACCESS_F,13.5
+L2_ACCESS_O,13.5
+DRAM_ACCESS,200
+# ***************************************************************
