--- a/configs/accelerators/eyeriss-like.cfg
+++ b/configs/accelerators/eyeriss-like.cfg
@@ -24,7 +24,7 @@ MAC_WIDTH,1
 # L1 DATAFLOW: IS | WS | OS (DEPENDING ON L1_TYPE)
 # L1 DATAFLOW MUST BE POSITIONED BEFORE L1_TYPE.
 # L1_UNIT    : BYTE
-L1_DATAFLOW,WS
+L1_DATAFLOW,IS
 L1_TYPE,SEPARATED,24,448,48
 # ***************************************************************
 # S1_X & S1_Y [S]: # OF MULTIPLE PES
@@ -37,8 +37,8 @@ S1_Y,12
 # L2 DATAFLOW: IS | WS | OS (DEPENDING ON L2_TYPE)
 # L2 DATAFLOW MUST BE POSITIONED BEFORE L2_TYPE.
 # L2_UNIT    : KB
-L2_DATAFLOW,OS
-L2_TYPE,SHARED,128
+L2_DATAFLOW,WS
+L2_TYPE,SHARED,108
 # ***************************************************************
 # S2[S]: # OF MULTIPLE ACCELERATORS
 S2,1
