Update accelerator config; S1 constraints

--- a/configs/accelerator-configs/eyeriss.cfg
+++ b/configs/accelerator-configs/eyeriss.cfg
@@ -32,6 +32,8 @@ L1_TYPE,SEPARATED,24,448,48
 S1_NOC_EXISTS,1
 S1_X,14
 S1_Y,12
+S1_CONSTRAINT_X,KBPQ
+S1_CONSTRAINT_Y,KBPQCS
 # ***************************************************************
 # L2 [T]     : GLOBAL BUFFER IN EACH ACCELERATOR
 # L2 DATAFLOW: IS | WS | OS (DEPENDING ON L2_TYPE)
