--- a/configs/accelerator-configs/simba.cfg
+++ b/configs/accelerator-configs/simba.cfg
@@ -32,6 +32,8 @@ L1_TYPE,SEPARATED,8192,32768,3072
 S1_NOC_EXISTS,1
 S1_X,4
 S1_Y,4
+S1_CONSTRAINT_X,K
+S1_CONSTRAINT_Y,C
 # ***************************************************************
 # L2 [T]     : GLOBAL BUFFER IN EACH ACCELERATOR
 # L2 DATAFLOW: IS | WS | OS (DEPENDING ON L2_TYPE)
