--- a/configs/accelerator-configs/tpu.cfg
+++ b/configs/accelerator-configs/tpu.cfg
@@ -32,6 +32,8 @@ L1_TYPE,SEPARATED,1,1,1
 S1_NOC_EXISTS,1
 S1_X,256
 S1_Y,256
+S1_CONSTRAINT_X,K
+S1_CONSTRAINT_Y,CRS
 # ***************************************************************
 # L2 [T]     : GLOBAL BUFFER IN EACH ACCELERATOR
 # L2 DATAFLOW: IS | WS | OS (DEPENDING ON L2_TYPE)
