--- a/configs/accelerators/simba.cfg
+++ b/configs/accelerators/simba.cfg
@@ -8,14 +8,14 @@ FREQUENCY=800
 UNIT_MAC_ENERGY=0.56
 UNIT_MAC_STATIC=0
 
-[REGISTER]
-TYPE=TEMPORAL
-DATAFLOW=NONe
-BUFFER_SIZE=1,1,1
-UNIT_ACCESS_ENERGY=0.0,0.0,0.0
-UNIT_STATIC_POWER=0,0,0
-UNIT_CYCLE=0,0,0
-BANDWIDTH=8
+# [REGISTER]
+# TYPE=TEMPORAL
+# DATAFLOW=NONe
+# BUFFER_SIZE=1,1,1
+# UNIT_ACCESS_ENERGY=0.0,0.0,0.0
+# UNIT_STATIC_POWER=0,0,0
+# UNIT_CYCLE=0,0,0
+# BANDWIDTH=8
 
 [MAC_ARRAY]
 TYPE=SPATIAL
