--- a/configs/accelerators/simba.cfg
+++ b/configs/accelerators/simba.cfg
@@ -24,8 +24,8 @@ BANDWIDTH=8
 
 [PE_ARRAY]
 TYPE=SPATIAL
-SIZE_X=16
-SIZE_Y=1
+SIZE_X=4
+SIZE_Y=4
 
 [GLOBAL_BUFFER]
 TYPE=TEMPORAL
@@ -39,12 +39,12 @@ BANDWIDTH=64
 
 [MULTI_CHIPS]
 TYPE=SPATIAL
-SIZE_X=36
-SIZE_Y=1
+SIZE_X=6
+SIZE_Y=6
 
 [DRAM]
 TYPE=TEMPORAL
-BUFFER_SIZE=4194304
+SIZE=8388608
 UNIT_ACCESS_ENERGY=64,64,64
 UNIT_STATIC_POWER=0.008,0.008,0.008
 UNIT_CYCLE=8,8,8
