--- a/configs/accelerators/acc_2lv.cfg
+++ b/configs/accelerators/acc_2lv.cfg
@@ -2,33 +2,31 @@
 # ACCELERATOR SPECIFICATION
 # ***************************************************************
 [ACCELERATOR]
-NAME=EYERISS
+NAME=ACCELERATOR_2LV
 PRECISION=INT16
 FREQUENCY=200
 UNIT_MAC_ENERGY=2.2
-UNIT_MAC_STATIC=0.0132
 
 [LOCAL_BUFFER]
 TYPE=TEMPORAL
 DATAFLOW=WS
-BUFFER_SIZE=24,448,48
-UNIT_ACCESS_ENERGY=0.19,0.63,0.25
-UNIT_STATIC_POWER=0.0000006,0.000027,0.000007
+BUFFER_SIZE=256
+UNIT_ACCESS_ENERGY=0.5,0.5,0.5
 UNIT_CYCLE=1,1,1
 BANDWIDTH=16
 
 [PE_ARRAY]
 TYPE=SPATIAL
-SIZE_X=14
-SIZE_Y=12
+SIZE_X=4
+SIZE_Y=4
 
 [GLOBAL_BUFFER]
 TYPE=TEMPORAL
 DATAFLOW=OS
-BUFFER_SIZE=102400
+BUFFER_SIZE=131072
 BYPASS=WEIGHT
-UNIT_ACCESS_ENERGY=5.27,1.42,5.27
-UNIT_STATIC_POWER=0.006047,0.000387,0.006047
+UNIT_ACCESS_ENERGY=5.8,5.8,5.8
+UNIT_STATIC_POWER=0.0075,0.0075,0.0075
 UNIT_CYCLE=1,1,1
 BANDWIDTH=64
 
@@ -36,6 +34,5 @@ BANDWIDTH=64
 TYPE=TEMPORAL
 SIZE=4194304
 UNIT_ACCESS_ENERGY=128,128,128
-UNIT_STATIC_POWER=0.008,0.008,0.008
 UNIT_CYCLE=8,8,8
 BANDWIDTH=64
