--- a/configs/networks/inception-v4.cfg
+++ b/configs/networks/inception-v4.cfg
@@ -1,21 +1,18 @@
-# *********************************,,,,,,,,,
-# [NETWORK LAYERS],,,,,,,,,
-# *********************************,,,,,,,,,
-# [GENERAL CONV],,,,,,,,,
-#  - CONV_# : G=1 & ALL VALUES MUST BE LARGER THAN ZERO,,,,,,,,,
-#  - FC_#   : G=1 & P=Q=S=R=1 & stride=0,,,,,,,,,
-#  - PW_#   : G=1 &   S=R=1   & stride=1,,,,,,,,,
-# [GROUP CONV],,,,,,,,,
-#  - GROUP_#: G>1 & 'C' AND 'K' MUST BOTH BE DIVISIBLE BY 'G',,,,,,,,,
-#  - DEPTH_#: G>1 & G=C & K=CxN (N=POSITIVE INTEGER),,,,,,,,,
-# *********************************,,,,,,,,,
-# [TEMPLATE],,,,,,,,,
-#  - CONV_#,1,K,B,P,Q,C,S,R,stride
-#  - FC_#,1,K,B,1,1,C,1,1,0
-#  - PW_#,1,K,B,P,Q,C,1,1,1
-#  - GROUP_#,G,K,B,P,Q,C,S,R,stride
-#  - DEPTH_#,G,K,B,P,Q,C,S,R,stride
-# *********************************,,,,,,,,,
+# *********************************
+# [NETWORK LAYERS]
+# *********************************
+# [GENERAL CONV]
+#  - CONV_# : G=1 & ALL VALUES MUST BE LARGER THAN ZERO
+#  - FC_#   : G=1 & P=Q=S=R=1 & stride=0
+#  - PW_#   : G=1 &   S=R=1   & stride=1
+# [GROUP CONV]
+#  - GROUP_#: G>1 & 'C' AND 'K' MUST BOTH BE DIVISIBLE BY 'G'
+#  - DEPTH_#: G>1 & G=C & K=CxN (N=POSITIVE INTEGER)
+# *********************************
+# [TEMPLATE]
+#  - CONV_#=K,B,P,Q,C,S,R,G,stride
+#  - FC_#=K,B,1,1,C,1,1,1,0
+# *********************************
 # STEM : CONV1 ~ CONV11
 # INCEPTION=A : CONV12 ~ CONV18
 # REDUCTION-A : CONV19 ~ CONV22
