--- a/configs/accelerators/acc_2lv.cfg
+++ b/configs/accelerators/acc_2lv.cfg
@@ -6,12 +6,14 @@ NAME=ACCELERATOR_2LV
 PRECISION=INT16
 FREQUENCY=200
 UNIT_MAC_ENERGY=2.2
+UNIT_MAC_STATIC=0.0132
 
 [LOCAL_BUFFER]
 TYPE=TEMPORAL
 DATAFLOW=WS
 BUFFER_SIZE=256
 UNIT_ACCESS_ENERGY=0.5,0.5,0.5
+UNIT_STATIC_POWER=0.000018,0.000018,0.000018
 UNIT_CYCLE=1,1,1
 BANDWIDTH=16
 
@@ -34,5 +36,6 @@ BANDWIDTH=64
 TYPE=TEMPORAL
 SIZE=4194304
 UNIT_ACCESS_ENERGY=128,128,128
+UNIT_STATIC_POWER=0.008,0.008,0.008
 UNIT_CYCLE=8,8,8
 BANDWIDTH=64
