Update accelerator configurations to be compatible with version 1.16

--- a/configs/accelerators/simba.cfg
+++ b/configs/accelerators/simba.cfg
@@ -1,6 +1,38 @@
 # ***************************************************************
 # ACCELERATOR SPECIFICATION
+# ---------------------------------------------------------------
+# PRECISION: INT8 | INT16 | INT32 | FP8 | FP16 | FP32
+# FREQUENCY: Operating frequency of the acceleratora [MHz]
+# UNIT_MAC_ENERGY: Energy consumption per MAC operation [pJ]
+# UNIT_MAC_STATIC: Static power consumption per MAC operation [mW]
 # ***************************************************************
+
+# ***************************************************************
+# TEMPORAL COMPONENT SPECIFICATION (REGISTER, LOCAL_BUFFER, GLOBAL_BUFFER, DRAM)
+# ---------------------------------------------------------------
+# - TYPE: Always set as TEMPORAL
+# - DATAFLOW: Input Stationary (IS) | Weight Stationary (WS) | Output Stationary (OS)
+# - BUFFER_SIZE: Memory size(s) allocated for different data types (up to 3: input, weight, output) [B]
+#   - BUFFER_SIZE_MB, BUFFER_SIZE_KB: Specify memory size in MB or KB
+# - SEPARATED_DATA: (when BUFFER_SIZE has 2 values) Specifies data type allocated to second buffer 
+# - BYPASS: Specifies which data type to bypass (if not set, all data passes through buffer)
+# - UNIT_ACCESS_ENERGY: Energy consumption per access for each memory space [pJ]
+# - UNIT_STATIC_POWER: Static power consumption for each memory space [mW]
+# - UNIT_CYCLE: Required cycles for accessing each memory space
+# - BITWIDTH: Bit width for each memory space
+# ***************************************************************
+# ***************************************************************
+# SPATIAL COMPONENT SPECIFICATION (MAC_ARRAY, PE_ARRAY, MULTI_CHIPS)
+# ---------------------------------------------------------------
+# - TYPE: Always set as SPATIAL
+# - SIZE_X: Number of PEs in X dimension
+# - SIZE_Y: Number of PEs in Y dimension
+# - CONSTRAINT_X: Specifies which neural network dimensions can be parallelized across X-axis
+#               (e.g., CONSTRAINT_X=K,B,P,Q)
+# - CONSTRAINT_Y: Specifies which neural network dimensions can be parallelized across Y-axis
+#               (e.g., CONSTRAINT_Y=C,R,S)
+# ***************************************************************
+
 [ACCELERATOR]
 NAME=SIMBA
 PRECISION=INT8
@@ -20,7 +52,7 @@ BUFFER_SIZE=8192,32768,3072
 UNIT_ACCESS_ENERGY=0.71,1.45,0.42
 UNIT_STATIC_POWER=0.000364,0.001663,0.000149
 UNIT_CYCLE=1,1,1
-BANDWIDTH=8
+BITWIDTH=8,8,8
 
 [PE_ARRAY]
 TYPE=SPATIAL
@@ -30,12 +62,13 @@ SIZE_Y=4
 [GLOBAL_BUFFER]
 TYPE=TEMPORAL
 DATAFLOW=OS
-BUFFER_SIZE=65536
+BUFFER_SIZE_KB=64,0
+SEPARATED_DATA=WEIGHT
 BYPASS=WEIGHT
-UNIT_ACCESS_ENERGY=2.23,0.0,2.23
-UNIT_STATIC_POWER=0.002699,0,0.002699
-UNIT_CYCLE=1,1,1
-BANDWIDTH=64
+UNIT_ACCESS_ENERGY=2.23,0.0
+UNIT_STATIC_POWER=0.002699,0
+UNIT_CYCLE=1,1
+BITWIDTH=64, 64
 
 [MULTI_CHIPS]
 TYPE=SPATIAL
@@ -44,8 +77,8 @@ SIZE_Y=6
 
 [DRAM]
 TYPE=TEMPORAL
-SIZE=8388608
-UNIT_ACCESS_ENERGY=64,64,64
-UNIT_STATIC_POWER=0.008,0.008,0.008
-UNIT_CYCLE=8,8,8
-BANDWIDTH=64
+SIZE_MB=8192
+UNIT_ACCESS_ENERGY=64
+UNIT_STATIC_POWER=0.008
+UNIT_CYCLE=8
+BITWIDTH=64
