--- a/configs/accelerators/flexflow.cfg
+++ b/configs/accelerators/flexflow.cfg
@@ -1,14 +1,43 @@
 # ***************************************************************
 # ACCELERATOR SPECIFICATION
+# ---------------------------------------------------------------
+# PRECISION: INT8 | INT16 | INT32 | FP8 | FP16 | FP32
+# FREQUENCY: Operating frequency of the acceleratora [MHz]
+# UNIT_MAC_ENERGY: Energy consumption per MAC operation [pJ]
+# UNIT_MAC_STATIC: Static power consumption per MAC operation [mW]
 # ***************************************************************
+
+# ***************************************************************
+# TEMPORAL COMPONENT SPECIFICATION (REGISTER, LOCAL_BUFFER, GLOBAL_BUFFER, DRAM)
+# ---------------------------------------------------------------
+# - TYPE: Always set as TEMPORAL
+# - DATAFLOW: Input Stationary (IS) | Weight Stationary (WS) | Output Stationary (OS)
+# - BUFFER_SIZE: Memory size(s) allocated for different data types (up to 3: input, weight, output) [B]
+#   - BUFFER_SIZE_MB, BUFFER_SIZE_KB: Specify memory size in MB or KB
+# - SEPARATED_DATA: (when BUFFER_SIZE has 2 values) Specifies data type allocated to second buffer 
+# - BYPASS: Specifies which data type to bypass (if not set, all data passes through buffer)
+# - UNIT_ACCESS_ENERGY: Energy consumption per access for each memory space [pJ]
+# - UNIT_STATIC_POWER: Static power consumption for each memory space [mW]
+# - UNIT_CYCLE: Required cycles for accessing each memory space
+# - BITWIDTH: Bit width for each memory space
+# ***************************************************************
+# ***************************************************************
+# SPATIAL COMPONENT SPECIFICATION (MAC_ARRAY, PE_ARRAY, MULTI_CHIPS)
+# ---------------------------------------------------------------
+# - TYPE: Always set as SPATIAL
+# - SIZE_X: Number of PEs in X dimension
+# - SIZE_Y: Number of PEs in Y dimension
+# - CONSTRAINT_X: Specifies which neural network dimensions can be parallelized across X-axis
+#               (e.g., CONSTRAINT_X=K,B,P,Q)
+# - CONSTRAINT_Y: Specifies which neural network dimensions can be parallelized across Y-axis
+#               (e.g., CONSTRAINT_Y=C,R,S)
+# ***************************************************************
+
 [ACCELERATOR]
 NAME=FLEXFLOW
 PRECISION=INT16
 FREQUENCY=200
 UNIT_MAC_ENERGY=2.2
-UNIT_MUL_ENERGY=2.16
-UNIT_ADD_ENERGY=0.04
-UNIT_MAC_STATIC=0.0132
 
 [LOCAL_BUFFER]
 TYPE=TEMPORAL
@@ -16,9 +45,8 @@ DATAFLOW=WS
 BUFFER_SIZE=256,256,0
 BYPASS=OUTPUT
 UNIT_ACCESS_ENERGY=0.502,0.502,0.075
-UNIT_STATIC_POWER=0,0,0
 UNIT_CYCLE=1,1,1
-BANDWIDTH=16
+BITWIDTH=16,16,16
 
 [PE_ARRAY]
 TYPE=SPATIAL
@@ -29,18 +57,16 @@ CONSTRAINT_Y=C,R,S
 
 [GLOBAL_BUFFER]
 TYPE=TEMPORAL
-DATAFLOW=OS
-BYPASS=WEIGHT
 BUFFER_SIZE=32768,32768
-UNIT_ACCESS_ENERGY=3,3,3
-UNIT_STATIC_POWER=0,0,0
-UNIT_CYCLE=1,1,1
-BANDWIDTH=64
+DATAFLOW=OS
+SEPARATED_DATA=WEIGHT
+UNIT_ACCESS_ENERGY=3,3
+UNIT_CYCLE=1,1
+BITWIDTH=64,64
 
 [DRAM]
 TYPE=TEMPORAL
 SIZE_MB=4096
-UNIT_ACCESS_ENERGY=128,128,128
-UNIT_STATIC_POWER=0.000,0.000,0.000
-UNIT_CYCLE=8,8,8
-BANDWIDTH=64
+UNIT_ACCESS_ENERGY=128
+UNIT_CYCLE=8
+BITWIDTH=64
